--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
 
 <body>
     <div class="main-container">
-        <header></header>
+        <header>
+            <nav class="navigation">
+                <img src="LOGO/Booki.png" alt="logo booki">
+                <div class="menunavigation">
+                    <a href="hebergement.html">Hébergements</a>
+                    <a href="Activités.html">Activités</a>
+                </div>
+            </nav>
+        </header>
         <main>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
