--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="main-container">
         <header>
             <nav class="navigation">
-                <img src="LOGO/Booki.png" alt="logo booki">
+                <img src="LOGO/Booki.png" alt="logobooki" class="logo">
                 <div class="menunavigation">
                     <a href="hebergement.html">Hébergements</a>
                     <a href="Activités.html">Activités</a>
